# Symphony

./: .eslintignore  .gitignore  .markdownlintignore  AGENTS.md  BENCHMARK_QUICKSTART.md  CHANGELOG.md  CI_CHECK_SCRIPT_SUMMARY.md  CONFIG_MIGRATION_AND_RATING_SUMMARY.md  COPILOT_QUICK_REFERENCE.md  Dockerfile.appimage  LICENSE  MIGRATION-PROGRESS.md  MIGRATION_COMPLETE.md  MIGRATION_STATUS.md  Makefile  PHASE5_COMPLETE.md  PHASE5_FINAL.md  PHASE5_PROGRESS.md  PHASE5_TESTING.md  PHASE6_PLANNING.md  PHASE6_SESSION1_COMPLETE.md  PHASE6_SESSION2_COMPLETE.md  PHASE6_TESTING_RESULTS.md  RATING_ALGORITHM_FIX.md  RATING_FIX_SUMMARY.md  RATING_HOVER_FIX.md  RATING_SYSTEM_COMPLETE.md  README.md  RELEASE_v0.4.0_SUMMARY.md  SESSION_TESTING_SUMMARY.md  STATUS.md  VISUAL_IMPROVEMENTS_COMPLETE.md  WAVEFORM_DEBUG_STEPS.md  WAVEFORM_FIXED_LAYOUT_FIX.md  WAVEFORM_FIXES_COMPLETE.md  WAVEFORM_FIX_APPLIED.md  WAVEFORM_FIX_RACE_CONDITION.md  WAVEFORM_SYNC_FIX.md  WAVEFORM_TEST_GUIDE.md  WORKFLOW_FIXES_SUMMARY.md  (+12 more)
.github/: SETUP.md  copilot-instructions.md
.github/agents/: architect.agent.md  debugger.agent.md  reviewer.agent.md
.github/instructions/: documentation.instructions.md  git-workflow.instructions.md  react-typescript.instructions.md  security.instructions.md  tauri-rust.instructions.md  testing.instructions.md
.github/prompts/: architecture.prompt.md  code-review.prompt.md  create-component.prompt.md  generate-docs.prompt.md  write-tests.prompt.md
.github/workflows/: README.md  ci.yml  copilot-setup-steps.yml  publish.yml  release.yml
aur/: .SRCINFO  PKGBUILD  POST_PUBLIC_CHECKLIST.md  README.md  symphony.desktop
coverage/: coverage-final.json  index.html  lcov.info
coverage/hooks/: index.html  useTheme.ts.html
coverage/lcov-report/: index.html
coverage/utils/: cn.ts.html  index.html
docs/: API.md  APPIMAGE_DISABLED.md  APPIMAGE_DOCKER_OPTIMIZED.md  APPIMAGE_DOCKER_SOLUTION.md  AUR_IMPLEMENTATION.md  AUR_TEST_SUCCESS.md  BEATPORT_FIX_TAGS_OPTIMIZATION.md  BEATPORT_OPTIMIZATION_SUMMARY.md  BEATPORT_OPTIMIZATION_TEST_GUIDE.md  CHANGELOG.md  CI_CHECK_GUIDE.md  CONFIG_MIGRATION_SUMMARY.md  COPILOT_QUICK_REFERENCE.md  DEV_PERFORMANCE.md  E2E_DEBUG_GUIDE.md  E2E_TEST_SEPARATION.md  FRONTEND_RATING_SUMMARY.md  MAKEFILE.md  PORTABLE_BUILDS_RESEARCH.md  RATING_FINAL_FIX.md  RATING_IMPLEMENTATION.md  RELEASE_v0.6.0_SUMMARY.md  SESSION_SUMMARY_M6_START.md  SESSION_v0.15.0_SUMMARY.md  SETTINGS_MODAL_IMPLEMENTATION.md  STATUS.md  VISUAL_CHANGES_DEBUG.md  VISUAL_IMPROVEMENTS_SESSION_SUMMARY.md  WAVEFORM_DEBUG_GUIDE.md  WAVEFORM_FINAL_FIX.md  WAVEFORM_FIXES_QUICKREF.md  WAVEFORM_STREAMING_FIX.md  WINDOW_DRAG_IMPLEMENTATION.md  audio-architecture-replacement.md  base.md  benchmark-results.md  benchmark-summary.md  benchmark-waveform.md  config-migration.md  database-management.md  (+22 more)
docs/ui/: star-rating-improvements.md
e2e/: README.md  basic-launch.wdio.spec.js  debug-tauri-driver.js  import-library.spec.ts  selenium-basic.spec.js  settings-layout.spec.ts  simple-launch.spec.js
e2e-report/: index.html
e2e/fixtures/: README.md
e2e/helpers/: tauri.ts
scripts/: CI_CHECK_GUIDE.md  benchmark-waveform.sh  build-appimage-docker.sh  check-ci.sh  clear-waveform-cache.sh  test-aur-after-public.sh  verify-waveform-fixes.sh
src/: App.old.tsx  App.svelte  App.tsx  MainApp.svelte  WebDemo.svelte  main.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs
src-tauri/src/audio/: beatgrid_detector.rs  constants.rs  decoder.rs  dsp.rs  error.rs  mod.rs  output.rs  player.rs  resampler.rs  waveform.rs
src-tauri/src/audio/output/: cpal_impl.rs  device.rs  mod.rs
src-tauri/src/audio/player/: decode_loop.rs  decoder.rs  events.rs  mod.rs  player.rs  state.rs  types.rs
src-tauri/src/audio/waveform/: cache.rs  conversion.rs  generation.rs  mod.rs  streaming.rs  types.rs
src-tauri/src/commands/: analysis.rs  audio.rs  audio.rs.backup  beatport.rs  beatport.rs.backup  conversion.rs  library.rs  mod.rs  playlists.rs  settings.rs
src-tauri/src/commands/audio/: mod.rs
src-tauri/src/commands/beatport/: mod.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs  models.rs  pool.rs  queries.rs  queries.rs.old
src-tauri/src/db/migrations/: mod.rs  runner.rs  schema.rs
src-tauri/src/db/queries/: analysis.rs  mod.rs  playlists.rs  settings.rs  tracks.rs
src-tauri/src/db/queries/analysis/: beatgrids.rs  cue_points.rs  loops.rs  mod.rs  waveforms.rs
src-tauri/src/db/queries/tracks/: consolidate.rs  create.rs  delete.rs  mod.rs  read.rs  search.rs  update.rs
src-tauri/src/utils/: mod.rs  path_utils.rs  paths.rs
src-tauri/tests/: integration_rating_import.rs
src/components/: AudioPlayer.test.tsx  Toast.tsx  (+23 more)
test-results/: .last-run.json
(+176 files in other folders)
