[package]
name = "symphony"
version = "0.16.0"
description = "The Old School Music Manager"
authors = ["Jose Vega"]
edition = "2021"
default-run = "symphony"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "symphony_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "waveform_bench"
path = "src/bin/waveform_bench.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["v4", "serde"] }
memmap2 = "0.9"
tokio-util = "0.7"

# Audio dependencies
# AIDEV-NOTE: Arquitectura de audio estilo Musicat - symphonia (decode) + cpal (output) + rb (ring buffer)
symphonia = { version = "0.5", features = ["mp3", "flac", "wav", "ogg", "aac"] }
cpal = "0.15.3"                                                                  # Salida de audio directa (reemplaza rodio)
rb = "0.4.1"                                                                     # Ring buffer SPSC para desacoplar decode de playback
atomic-wait = "1.1.0"                                                            # Pause/resume eficiente sin spin-lock
rubato = "0.15"                                                                  # Sample rate conversion (resampling)
hound = "3.5"
tauri-plugin-log = "2.7.1"
log = "0.4.29"

# Metadata dependencies
# AIDEV-NOTE: lofty para lectura/escritura de tags ID3v2, ID3v1, APEv2, Vorbis Comments, MP4
lofty = "0.22" # Equivalente Rust de mutagen (lectura + escritura de metadatos)
id3 = "1.14"   # Para lectura directa de frames POPM (Popularimeter)
base64 = "0.22.1"

# Beatport integration dependencies
# AIDEV-NOTE: reqwest para HTTP, scraper para parsing HTML de búsqueda Beatport
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
scraper = "0.22"
urlencoding = "2.1"
walkdir = "2.5.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
tempfile = "3.8"

# ============================================================================
# OPTIMIZATION: Compile audio dependencies with optimizations even in dev mode
# This is crucial because Symphonia is ~40x slower in debug mode
# ============================================================================
[profile.dev.package.symphonia]
opt-level = 3

[profile.dev.package.symphonia-core]
opt-level = 3

[profile.dev.package.symphonia-bundle-mp3]
opt-level = 3

[profile.dev.package.symphonia-bundle-flac]
opt-level = 3

[profile.dev.package.symphonia-format-ogg]
opt-level = 3

[profile.dev.package.symphonia-codec-vorbis]
opt-level = 3

[profile.dev.package.symphonia-codec-aac]
opt-level = 3

[profile.dev.package.rubato]
opt-level = 3

[profile.dev.package.cpal]
opt-level = 3

[profile.dev.package.rb]
opt-level = 3
